fix: update toggle switch colors for better visibility in dark mode

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -286,17 +286,21 @@
   width: 13px;
   left: 2px;
   bottom: 2px;
-  background-color: #ccc;
+  background-color: #000000d0;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 input:checked + .slider:before {
+  background-color: #ccc;
+}
+
+.dark-mode input:checked + .slider:before {
   background-color: #000000d0;
 }
 
 .dark-mode .slider:before {
-  background-color: #000000d0;
+  background-color: #ccc;
 }
 
 input:checked + .slider {
